# skill-ops

./: README.md  vision-and-architecture.md
cli/: pyproject.toml
cli/skill_ops/: cli.py  core.py
cli/tests/: conftest.py  test_cli.py  test_core.py
docs/adr/: 001-cross-platform-linking-strategy.md
docs/plans/: org-agent-skills-migration.md  p0-cli-implementation-plan.md  p0-walkthrough.md  p1-cross-platform-linking.md  p1-walkthrough.md  p2-testing-strategy.md  p2-walkthrough.md  p3-installation-and-onboarding-dx.md
